# circle.ai

./: .gitignore  README.md  pyproject.toml  sample.txt
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
circle_ai/: app.py  exceptions.py  main.py  models.py
circle_ai/providers/: ollama.py
circle_ai/providers/kiss_hf/: tgi.py  tgi_pipeline.py
circle_ai/routes/: api.py  ollama_api.py  tgi_api.py
circle_ai/utils/: stream_processor.py
